# playground

./: .gitignore  README.md
infra/tracing-tempo-otel/: README.md  compose.yaml  grafana.yaml  otel-collector-config.yaml  span.json  tempo.yaml
java/quarkus-smallrye-jwt/: .gitignore  README.md  pom.xml
python/leetcode/: pyproject.toml
python/leetcode/docs/: api.rst  conf.py  examples.rst  index.rst  requirements.txt
python/leetcode/src/: ex0074_matrixsearch.py  ex0121_maxslidingwindow.py  ex0704_binarysearch.py  leetcode.py
python/leetcode/tests/: ex0074_matrixsearchtest.py  ex0121_maxslidingwindow.py  ex0704_binarysearchtest.py
rust/advent-of-code-2023/: Cargo.toml  README.md
rust/advent-of-code-2023/src/: lib.rs  main.rs  test.rs
rust/advent-of-code-2025/: .gitignore  Cargo.toml  README.md
rust/advent-of-code-2025/day-01/: Cargo.toml
rust/advent-of-code-2025/day-02/: Cargo.toml
rust/advent-of-code-2025/day-02/benches/: benchmarks.rs
rust/advent-of-code-2025/day-02/src/: part1.rs  part2.rs
rust/advent-of-code-2025/day-03/: Cargo.toml
rust/advent-of-code-2025/day-04/: Cargo.toml
rust/advent-of-code-2025/day-05/: Cargo.toml
rust/advent-of-code-2025/day-06/: Cargo.toml
rust/advent-of-code-2025/day-07/: Cargo.toml
rust/advent-of-code-2025/day-08/: Cargo.toml
rust/advent-of-code-2025/day-08/benches/: benchmarks.rs
rust/advent-of-code-2025/day-08/src/: part1.rs  part2.rs
rust/advent-of-code-2025/day-09/: Cargo.toml
rust/advent-of-code-2025/day-09/benches/: benchmarks.rs
rust/advent-of-code-2025/day-09/src/: part1.rs  part2.rs
rust/advent-of-code-2025/template/: Cargo.toml
rust/bevy-mazerunner/: Cargo.toml
rust/bevy-mazerunner/examples/: basic.rs
rust/bevy-mazerunner/src/: camera.rs  config.rs  grid.rs  lib.rs  physics.rs  simplegrid.rs  visibility.rs
rust/bevy-platformer/: Cargo.toml
rust/bevy-platformer/assets/: platformer.ldtk
rust/bevy-platformer/src/: audio.rs  lib.rs  main.rs  offset_colliders.rs
rust/bevy-sand/: Cargo.toml  README.md
rust/bevy-sand/src/: colorscheme.rs  debug.rs  main.rs  position.rs  sparse_grid.rs  (+1 more)
rust/bevy-snake/: Cargo.toml  README.md
rust/bevy-snake/src/: colorscheme.rs  config.rs  debug.rs  lib.rs  limited_queue.rs  main.rs  window.rs
rust/bevy-snake/src/game/: debug.rs  game.rs  grid.rs  input.rs  mod.rs  snake.rs
rust/bevy-snake/src/game/mechanics/: food.rs  mod.rs  movement.rs  portal.rs
rust/bevy-snake/src/types/: direction.rs
rust/bevy-top-down-tiled/: .gitignore  Cargo.toml
rust/hex-rgba/: Cargo.toml
rust/perseus/: .gitignore  Cargo.toml  tailwind.config.js
rust/raylib-sand/: Cargo.toml  README.md
rust/tictactoe/: Cargo.toml
scala/advent-of-code/: .gitignore  build.sbt
(+132 files in other folders)
