[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "leetcode"
description = "Random leetcode solutions"
readme = "README.md"
license = { text = "MIT" }
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "crcmod~=1.7",
]

[project.urls]
"Homepage" = "https://github.com/azthec/playground"

[tool.ruff]
ignore = ["E501"]
[tool.ruff.extend-per-file-ignores]
"__init__.py" = ["F401"]

