[package]
name = "bevy-snake"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.2", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.27.0"
bevy_framepace = "0.17.1"
# bevy = "0.14.0" # stand-alone binary
rand = "0.8.5"

[features]
dev = []

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

