[package]
name = "day-08"
version = "1.0.0"
edition = "2024"

[dependencies]
itertools.workspace = true
nom.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
miette.workspace = true
glam.workspace = true

[dev-dependencies]
divan.workspace = true
rstest.workspace = true

[[bench]]
name = "day-08-bench"
path = "benches/benchmarks.rs"
harness = false
